# echo

./: .gitignore  Cargo.toml  README.md  ecosystem.config.js  package.json
src/: bot.rs  main.rs
